--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,16 +1,27 @@
 [tool.poetry]
 name = "pcmap"
-version = "0.2.0"
+version = "0.3.4"
 description = "Computing contact map for protein structures"
 authors = ["Guillaume Launay <guillaume.launay@ibcp.fr>"]
 license = "GPL"
+classifiers=[
+              "Intended Audience :: Science/Research",
+              "License :: OSI Approved :: MIT License",
+              "Programming Language :: Python :: 3",
+              "Topic :: Scientific/Engineering :: Bio-Informatics",
+              "Topic :: Software Development :: Libraries :: Python Modules",
+              "Development Status :: 5 - Production/Stable" 
+       ]
+homepage="https://github.com/MMSB-MOBI/pcmap"
+keywords=['protein', 'structure', 'atomic contact']
+#include=["data/*"]
 
 [tool.poetry.dependencies]
-python = "^3.7"
+python = "^3.6"
 ccmap = "^2.1.3"
 docopt = "^0.6.2"
 pypstruct = "^0.1"
-numpy = "^1.20.3"
+numpy = "^1.19.0"
 
 [tool.poetry.dev-dependencies]
 
