--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "pcmap"
-version = "0.3.4"
+version = "0.4.0"
 description = "Computing contact map for protein structures"
 authors = ["Guillaume Launay <guillaume.launay@ibcp.fr>"]
 license = "GPL"
@@ -17,13 +17,14 @@ keywords=['protein', 'structure', 'atomic contact']
 #include=["data/*"]
 
 [tool.poetry.dependencies]
-python = "^3.6"
+python = ">=3.7,<3.11"
 ccmap = "^2.1.3"
 docopt = "^0.6.2"
-pypstruct = "^0.1"
+pypstruct = "^0.1.2"
 numpy = "^1.19.0"
 
 [tool.poetry.dev-dependencies]
+jupyter = "^1.0.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
