--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,10 +18,10 @@ keywords=['protein', 'structure', 'atomic contact']
 
 [tool.poetry.dependencies]
 python = ">=3.7,<3.11"
-ccmap = "^2.1.3"
 docopt = "^0.6.2"
 pypstruct = "^0.1.2"
 numpy = "^1.19.0"
+ccmap = {path = "../ccmap/dist/ccmap-3.0.0-cp39-cp39-macosx_10_9_x86_64.whl"}
 
 [tool.poetry.dev-dependencies]
 jupyter = "^1.0.0"
