--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ classifiers=[
               "Development Status :: 5 - Production/Stable" 
        ]
 homepage="https://github.com/MMSB-MOBI/pcmap"
-keywords=['protein', 'structure', 'atomic contact']
+keywords=['protein', 'structure', 'atomic contact', 'SASA']
 #include=["data/*"]
 
 [tool.poetry.dependencies]
@@ -24,9 +24,9 @@ numpy = "^1.19.0"
 tqdm = "^4.64.1"
 ipykernel = "^6.20.0"
 ccmap = "^4.0.0"
+MDAnalysis = "^2.3.0"
 [tool.poetry.dev-dependencies]
 jupyter = "^1.0.0"
-MDAnalysis = "^2.3.0"
 setuptools = "^65.6.3"
 
 [build-system]
