--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,31 +1,23 @@
-[tool.poetry]
+[project]
 name = "pcmap"
-version = "0.5.0"
-description = "Computing contact map for protein structures"
-authors = ["Guillaume Launay <guillaume.launay@ibcp.fr>"]
-license = "GPL"
-classifiers=[
-              "Intended Audience :: Science/Research",
-              "License :: OSI Approved :: MIT License",
-              "Programming Language :: Python :: 3",
-              "Topic :: Scientific/Engineering :: Bio-Informatics",
-              "Topic :: Software Development :: Libraries :: Python Modules",
-              "Development Status :: 5 - Production/Stable" 
-       ]
-homepage="https://github.com/MMSB-MOBI/pcmap"
-keywords=['protein', 'structure', 'atomic contact']
-#include=["data/*"]
+version = "0.1.0"
+description = "Add your description here"
+readme = "README.md"
+requires-python = ">=3.9"
+dependencies = [
+    "ccmap>=4.1",
+    "numpy>=2.0.2",
+    "pypstruct>=0.1.1",
+    "rich-cli>=1.8.1",
+    "rich-click>=1.9.7",
+]
 
-[tool.poetry.dependencies]
-python = ">=3.7,<3.11"
-ccmap = "^2.1.3"
-docopt = "^0.6.2"
-pypstruct = "^0.1.2"
-numpy = "^1.19.0"
-
-[tool.poetry.dev-dependencies]
-jupyter = "^1.0.0"
+[project.scripts]
+pcmap-monomer = "pcmap.bin.monomer:compute_monomer"
+pcmap-dimer   = "pcmap.bin.dimer:compute_dimer"
+pcmap-zdock   = "pcmap.bin.z_dimer:compute_z_dimer"
+pcmap-many   = "pcmap.bin.many:compute_many"
 
 [build-system]
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api"
+requires = ["uv_build>=0.10.0,<0.11.0"]
+build-backend = "uv_build"
